// Copyright 2020 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.meta;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/meta";

// FileOutputService is a service used by meta tests exercising file output
// support in gRPC services.
service FileOutputService {
  // SaveOutputs creates files in the gRPC output directory.
  rpc SaveOutputFiles(SaveOutputFilesRequest) returns (google.protobuf.Empty) {}
}

message SaveOutputFilesRequest {
  map<string, string> files = 1;
}
